# mcp-hangar

./: .commitlintrc.yml  .dockerignore  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SYSTEM_PROMPT.md  UPGRADE.md  config.yaml.example  docker-compose.monitoring.yml  docker-compose.yml  mcp-config.json.example  mkdocs.yml  mypy.txt  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  copilot-commit-message-instructions.md  copilot-pull-request-description-instructions.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: adr_proposal.yml  agent_task.yml  bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: actionlint.yml  branch-name.yml  changelog-check.yml  ci-core.yml  ci-docs.yml  ci-helm.yml  ci-operator.yml  commitlint.yml  dependabot-automerge.yml  docs.yml  interceptor-pin-drift.yml  lint.yml  live-verify.yml  pr-body.yml  pr-title.yml  pr-validation.yml  project-add.yml  release-please.yml  release.yml  security.yml  stale.yml  test.yml  version-bump.yml
.planning/: GSD_STATE.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v0.9-MILESTONE-AUDIT.md
.planning/milestones/: v0.10-REQUIREMENTS.md  v0.10-ROADMAP.md  v0.9-REQUIREMENTS.md  v1.0-REQUIREMENTS.md  v1.0-research-ARCHITECTURE.md  v1.0-research-PITFALLS.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md  v5.0-REQUIREMENTS.md  v6.0-otel-foundation-ROADMAP.md  v7.0-k8s-enforcement-licensing-ROADMAP.md  v8.0-behavioral-profiling-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/crds/: mcpprovider.yaml
docker/: Dockerfile.sqlite
docs/: FAQ.md  INDEX.md  PREBUILT_IMAGES.md  PROVIDER_GROUPS.md  SECURITY.md  TROUBLESHOOTING.md  cla.md  index.md  requirements.txt  upgrade.md
docs/adr/: 001-langfuse-integration.md  ADR-001-cqrs.md  ADR-002-event-sourcing.md  ADR-003-sagas.md  ADR-004-sep-1766-digest-pinning.md  ADR-005-sep-1763-interceptor-compliance.md  ADR-006-tetragon.md  ADR-007-langfuse-integration.md  AGENTS.md  README.md
docs/api/: TOOLS_REFERENCE.md
docs/architecture/: DDD_PATTERNS.md  EVENT_SOURCING.md  INTERCEPTOR_FRAMEWORK.md  OVERVIEW.md
docs/cookbook/: 01-http-gateway.md  02-health-checks.md  03-circuit-breaker.md  04-failover.md  05-load-balancing.md  06-rate-limiting.md  07-observability-metrics.md  08-observability-langfuse.md  09-subprocess-mcp-servers.md  09-subprocess-providers.md  10-discovery-docker.md  11-discovery-kubernetes.md  12-auth-rbac.md  13-production-checklist.md  index.md
docs/development/: BRANCH_PROTECTION.md  CONTRIBUTING.md  EPIC_PLAYBOOK.md  GIT_FLOW.md  HOTFIX_RUNBOOK.md  PROJECT_BOARD.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: AUTHENTICATION.md  BATCH_INVOCATIONS.md  CONTAINERS.md  DASHBOARD.md  DISCOVERY.md  FACADE_API.md  HTTP_TRANSPORT.md  KUBERNETES.md  LOG_STREAMING.md  OBSERVABILITY.md  PROVIDER_GROUPS.md  REST_API.md  TESTING.md  UX_IMPROVEMENTS.md  WEBSOCKETS.md
docs/integrations/: openlit-otlp.md
docs/internal/: ADR_AGENTS.md  AUTH_RS_SCOPE.md  LIVE_VERIFICATION.md  PRODUCT_ARCHITECTURE.md  UPSTREAM_SPEC_TRACKING.md
docs/observability/: otel-integrations.md
docs/operations/: COMPLIANCE.md
docs/reference/: cli.md  configuration.md  hot-reload.md  rest-api.md  tools.md
docs/runbooks/: RELEASE.md
docs/security/: AUTH_SECURITY_AUDIT.md
docs/testing/: approval-gate-manual-testing.md
enterprise/: LICENSE.BSL  __init__.py
enterprise/approvals/: __init__.py  bootstrap.py  hold_registry.py  models.py  service.py
enterprise/auth/: __init__.py  bootstrap.py  cli.py  http_middleware.py  license.py  roles.py
enterprise/behavioral/: __init__.py  baseline_store.py  bootstrap.py  connection_log_worker.py  deviation_detector.py  docker_network_monitor.py  k8s_network_monitor.py  proc_net_parser.py  profiler.py  report_generator.py  resource_monitor.py  resource_store.py  schema_tracker.py
enterprise/compliance/: __init__.py  cef_exporter.py  cef_formatter.py  jsonlines_exporter.py  leef_exporter.py  syslog_exporter.py
enterprise/dashboard/: __init__.py
enterprise/finops/: __init__.py
enterprise/identity/: __init__.py
enterprise/integrations/: __init__.py  langfuse.py  test_langfuse.py
enterprise/persistence/: __init__.py  sqlite_event_store.py
enterprise/policies/: __init__.py
enterprise/semantic/: __init__.py
examples/: prometheus_example.py
examples/auth-keycloak/: README.md  docker-compose.yml  test-auth.sh  test_keycloak_integration.py  test_oidc_local.py
examples/discovery/: Dockerfile.test-provider  docker-compose.podman.yml  docker-compose.yml  kubernetes-deployment.yaml  provider-http.yaml  provider-subprocess.yaml  test_container_discovery.py
examples/kubernetes/: basic-provider.yaml  discovery-source.yaml  provider-group-ha.yaml  provider-with-secrets.yaml  remote-provider.yaml
examples/langfuse/: README.md
examples/openlit/: README.md  docker-compose.yml  otel-collector-config.yaml
examples/otel-collector/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
examples/provider_identity/: server.py
examples/provider_math/: Dockerfile  (+1 more)
mcp_hangar/: __init__.py  errors.py  fastmcp_server.py  gc.py  logging_config.py  metrics.py  models.py  progress.py  provider_manager.py  retry.py  server.py  stdio_client.py
operator/: Makefile  README.md  go.mod  go.sum
scripts/: check_changelog.sh  check_changelog_release_ready.sh  check_enterprise_boundary.sh  check_pr_body.sh  containers.sh  dev-workspace.sh  fix_enterprise_imports.py  fix_enterprise_test_imports.py  install.sh  migrate_db.py  opencode-split.sh  setup-branch-protection.sh  setup-discussions.sh  setup-gh-project.sh  setup-subproject-symlinks.sh  sync-labels.sh  validate_config.py  verify-migration.sh
security/: README.md
tests/: MULTITENANCY_TESTING.md  mock_provider.py
tools/: check_enterprise_imports.py
(+987 files in other folders)
