# Root pyproject.toml for shared tooling config
# Actual package is in packages/core/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hangar-workspace"
version = "0.12.0"
description = "MCP-Hangar monorepo workspace - see packages/core for actual package"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "MCP Hangar Contributors" }
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["packages/operator", "site", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false
case-sensitive = false
combine-as-imports = true
known-first-party = ["mcp_hangar"]

[tool.mypy]
python_version = "3.11"
exclude = ["packages/operator", "site", "dist"]
strict = true
